--- a/ui/package.json
+++ b/ui/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "antd": "^5.28.0",
     "isbot": "^5.1.31",
+    "jsonschema": "file:gen/jsonschema",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2",
-    "test-package": "file:../ts/tsp-output/clients/js"
+    "test-package": "file:gen/clients/js"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
